# hsl2025_final

./: .gitignore  README.md
docker/: Dockerfile  build.bash  docker-compose.yml  into.bash  run.bash  run_bag.bash  stop.bash
docker_ws/: .gitignore
kobuki/docker/: Dockerfile  bringup.launch.py  build.bash  docker-compose.yml  into.bash  run.bash  stop.bash
kobuki/scripts/udev_rules/: udev_setup.bash
kobuki/workspace/src/kobuki_bringup/: package.xml  setup.cfg  setup.py
kobuki/workspace/src/kobuki_bringup/config/: nav2_params.yaml  rtabmap_params.yaml
kobuki/workspace/src/kobuki_bringup/launch/: bringup.launch.py  bringup_robot.launch.py  navigation.launch.py  sensors.launch.py
kobuki/workspace/src/kobuki_bringup/resource/: kobuki_bringup
kobuki/workspace/src/kobuki_ros/kobuki_node/config/: kobuki_node_params.yaml
kobuki/workspace/src/launch/: bringup_bag.launch.py  bringup_common.launch.py
kobuki/workspace/src/livox_ros_driver2/: CMakeLists.txt
kobuki/workspace/src/livox_ros_driver2/config/: MID360_tb_config.json  tb_and_livox.rviz
kobuki/workspace/src/livox_ros_driver2/launch/: mid360.launch.py  rviz_MID360_tb_launch.py
launch/: bringup.launch.py  bringup_bag.launch.py  bringup_common.launch.py  bringup_robot.launch.py
solution/workspace/src/coverage_node/: CMakeLists.txt  package.xml
solution/workspace/src/coverage_node/include/coverage_node/: coverage_node.hpp
solution/workspace/src/coverage_node/src/: coverage_node.cpp  main.cpp
solution/workspace/src/mark_detector/: CMakeLists.txt  package.xml
solution/workspace/src/mark_detector/include/mark_detector/: geom.hpp  mark_detector_node.hpp  mark_recognizer.hpp
solution/workspace/src/mark_detector/src/: geom.cpp  mark_detector_node.cpp  mark_recognizer.cpp
solution/workspace/src/solution_bringup/: package.xml  setup.cfg  setup.py
solution/workspace/src/solution_bringup/config/: nav2_params.yaml  pointcloud_to_laserscan.yaml  rtabmap_params.yaml
solution/workspace/src/solution_bringup/launch/: coverage.launch.py  navigation.launch.py
solution/workspace/src/solution_bringup/resource/: solution_bringup
solution/workspace/src/solution_bringup/solution_bringup/: fixed_goal_node.py
solution/workspace/src/webots_bridge/: setup.py
solution/workspace/src/webots_bridge/launch/: robot_launch.py
solution/workspace/src/webots_bridge/protos/: GeneratedMaze.proto
solution/workspace/src/webots_bridge/resource/: webots_bridge.urdf
solution/workspace/src/webots_bridge/webots_bridge/: webots_driver.py
solution/workspace/src/webots_bridge/worlds/: .hsl_maze.wbproj  hsl_maze.wbt
