<?xml version="1.0"?>
<package format="3">
  <name>kobuki_bringup</name>
  <version>0.1.0</version>
  <description>Launch descriptions and configuration for running Kobuki base and sensors.</description>
  <maintainer email="nikita.savinov@example.com">Nikita Savinov</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>kobuki_node</exec_depend>
  <exec_depend>cmd_vel_mux</exec_depend>
  <exec_depend>livox_ros_driver2</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
